--- a/Scribbler_Project/stub/css/header.css
+++ b/Scribbler_Project/stub/css/header.css
@@ -1,2 +1,130 @@
 /* Set a style for all elements inside the header i.e. Sign Up button, Sign In button, 
 the title "ScriBBler" & the sub-heading below "ScriBBLer" */
+.page-title{
+    font-family: Satisfy;
+    color:blue;
+    font-size: 40px;
+    padding:5px;
+    margin:5px 0px 0px 0px;
+}
+.subTitle{
+    font-family: 'Satisfy', cursive;
+    padding: 5px;
+    margin:0px;
+    font-size: 13.5px;
+}
+
+h3{
+    font-family:Itim;
+    color: black;
+    font-weight: bolder;
+    align: center;
+    size: 20px;
+}
+
+#buttonForSignIn{
+    background-color:blue;
+    font-family:Itim;
+    font-size: 20px;
+    color:white;
+    padding: 12px 12px 10px 10px;
+    margin: 4px;
+    border: 1px solid grey;
+    width: 120px;
+
+}
+#buttonForSignUp{
+    background-color:blue;
+    font-family:Itim;
+    font-size: 20px;
+    color:white;
+    padding: 12px 12px 10px 10px;
+    margin: 4px 10px 4px 4px;
+    border: 1px solid grey;
+    width: 120px;
+}
+
+input{
+    padding: 2%;
+    background-color: lightgray;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+label{
+
+    font-weight: bolder;
+    margin: 10px 0;
+    font-family: sans-serif;
+}
+
+@media(max-width:400px){
+    form{
+        width: 80%;
+    }
+}
+
+.signbuttons{
+    margin-top: 5px;
+    font-size: 8pt;
+    position:absolute;
+    top:0;
+    right:0;
+
+}
+
+.submit-btn{
+    background-color: green;
+    color:white;
+    padding: 2%;
+    font-size: 22px;
+    margin-top:10px;
+    border: 0;
+    cursor:pointer;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.signUpContent {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.close {
+    color: #aaaaaa;
+    float: left;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
