--- a/Scribbler_Project/stub/css/header.css
+++ b/Scribbler_Project/stub/css/header.css
@@ -1,5 +1,3 @@
-/* Set a style for all elements inside the header i.e. Sign Up button, Sign In button, 
-the title "ScriBBler" & the sub-heading below "ScriBBLer" */
 .page-title{
     font-family: Satisfy;
     color:blue;
@@ -7,6 +5,7 @@ the title "ScriBBler" & the sub-heading below "ScriBBLer" */
     padding:5px;
     margin:5px 0px 0px 0px;
 }
+
 .subTitle{
     font-family: 'Satisfy', cursive;
     padding: 5px;
@@ -14,12 +13,17 @@ the title "ScriBBler" & the sub-heading below "ScriBBLer" */
     font-size: 13.5px;
 }
 
-h3{
-    font-family:Itim;
+#getStarted,#welcomeBack,#getStarted{
+    font-family:"Comic Sans MS";
     color: black;
+    font-size: xx-large;
     font-weight: bolder;
-    align: center;
-    size: 20px;
+    text-align: center;
+}
+
+hr{
+    border: 1px solid black ;
+    width: 100%;
 }
 
 #buttonForSignIn{
@@ -31,8 +35,9 @@ h3{
     margin: 4px;
     border: 1px solid grey;
     width: 120px;
-
+    cursor: pointer;
 }
+
 #buttonForSignUp{
     background-color:blue;
     font-family:Itim;
@@ -42,22 +47,28 @@ h3{
     margin: 4px 10px 4px 4px;
     border: 1px solid grey;
     width: 120px;
+    cursor: pointer;
 }
 
 input{
     padding: 2%;
     background-color: lightgray;
+    border: none;
+    height: 30px;
+}
+
+input::placeholder{
+    font-family:Itim;
 }
 
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
 label{
-
+    padding-top: 10px;
     font-weight: bolder;
     margin: 10px 0;
     font-family: sans-serif;
@@ -81,9 +92,10 @@ label{
 .submit-btn{
     background-color: green;
     color:white;
-    padding: 2%;
-    font-size: 22px;
-    margin-top:10px;
+    padding: 4%;
+    font-size: 18px;
+    margin-top: 35px;
+    margin-bottom: 20px;
     border: 0;
     cursor:pointer;
 }
@@ -103,22 +115,34 @@ label{
     background-color: rgba(0,0,0,0.4);
 }
 
-.signUpContent {
+#signUpContent,#signInContent {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 40%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
 
+#noMember{
+    text-align: center;
+    font-weight: bolder;
+    font-size: large;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
+a{
+    color:blue;
+    cursor: pointer;
 }
 
 .close {
     color: #aaaaaa;
-    float: left;
-    font-size: 28px;
+    float: right;
+    font-size: 40px;
     font-weight: bold;
 }
 
