--- a/Scribbler_Project/stub/css/post.css
+++ b/Scribbler_Project/stub/css/post.css
@@ -2,18 +2,39 @@
     font-size: 150%;
     font-family: 'Abel', sans-serif;
     font-weight: bold;
+    text-align:center;
 }
 .blogText {
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 .blogAuthor {
-    padding: 0px 0px 0px 10px;
     font-family: 'Niconne', cursive;
     font-size: 30px;
+    float: left;
+    
+}
+
+.blogEdit{
+    float: right;
 }
 .blogContent{
-
+    text-align:justify;
+    margin-left:auto;
+    margin-right:auto;
+    width: 90%;
+    
 }
 
-/* Set a style for all the remaining elements like Like button, Edit button, Comment button and so on. */
+
+.btn{
+    border:none;
+    color: white;
+    background-color: #ff0066;
+    height: 40px;
+    width: 80px;
+    box-shadow: 0px 5px  12px -4px #ff0066;
+}
+.btn:hover{
+    cursor: pointer;
+}
