Changes 2:Like and Comment

--- a/Scribbler_Project/stub/css/post.css
+++ b/Scribbler_Project/stub/css/post.css
@@ -38,3 +38,12 @@
 .btn:hover{
     cursor: pointer;
 }
+.postLike{
+    border-radius: 5px;
+}
+
+#counterliked{
+    font-size: 15px; 
+    font-family: 'Abel', sans-serif;
+    margin-top:5px;
+}
