--- a/Scribbler_Project/stub/css/bloglist.css
+++ b/Scribbler_Project/stub/css/bloglist.css
@@ -1,12 +1,13 @@
 .post {
     position: relative;
-    width: 90%;
+    width: 40%;
     height: 20%;
     background: #fff;
     box-shadow:0 4px 10px 0 rgba(17, 4, 63, 0.2),0 4px 20px 0 rgba(79, 19, 97, 0.19);
     margin: 10px 10px 10px 20px;
     float:left;
     border-radius: 15px;
+    overflow:hidden;
 }
     
 .post-left {
@@ -17,6 +18,7 @@
         text-align: center;
         font-weight: bold;
         color: #000;
+
 }
 .post-content {
         width: 75%;           
@@ -58,7 +60,9 @@ body {
     background-size: 2000% 2000%;
 }
 .allPostsContainer {
-    height: 100%;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
 }
