--- a/Scribbler_Project/stub/css/post.css
+++ b/Scribbler_Project/stub/css/post.css
@@ -12,7 +12,6 @@
     font-family: 'Niconne', cursive;
     font-size: 30px;
     float: left;
-    
 }
 
 .blogEdit{
@@ -22,8 +21,7 @@
     text-align:justify;
     margin-left:auto;
     margin-right:auto;
-    width: 90%;
-    
+    width: 90%; 
 }
 
 
@@ -49,8 +47,21 @@
 }
 
 .comment{
-    margin-top: 10px;
+    margin-top: 5px;
 }
-.allComments{
+
+
+#commentdiv{
     background-color: gray;
+    width:70%;
+    flex-flow:row wrap;
+    width: 54.5%;
+    display: flex;
+    justify-content: center;
+}
+
+.eachcomment{
+    background: white;
+    padding: 19px;
+    width: 80%;
 }
