header.css file after adding for close

--- a/Scribbler_Project/stub/css/header.css
+++ b/Scribbler_Project/stub/css/header.css
@@ -142,6 +142,9 @@ a{
 .close {
     color: #aaaaaa;
     float: right;
+    top:-25px;
+    right:-10px;
+    position: relative;
     font-size: 40px;
     font-weight: bold;
 }
