Chnages to remove errors.

--- a/Scribbler_Project/stub/css/index.css
+++ b/Scribbler_Project/stub/css/index.css
@@ -38,11 +38,17 @@ body{
 #title{
    width: 50%;
    height: 30%;
+   padding: 2%;
+   background-color: lightgray;
+   border: none;
 }
 
 #content{
    width: 90%;
    height: 350px;
+   padding: 2%;
+   background-color: lightgray;
+   border: none;
      
 }
 
