--- a/Scribbler_Project/stub/css/index.css
+++ b/Scribbler_Project/stub/css/index.css
@@ -44,14 +44,18 @@ body{
 }
 
 #content{
-   width: 90%;
-   height: 350px;
+   width: 80%;
+   height: 320px;
    padding: 2%;
    background-color: lightgray;
    border: none;
      
 }
-
+.postclass{
+   margin-left: auto;
+   margin-right: auto;
+   width:89%;
+}
 
 
 
