--- a/Scribbler_Project/stub/css/index.css
+++ b/Scribbler_Project/stub/css/index.css
@@ -15,7 +15,7 @@ body{
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 75%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,7 +67,9 @@ body{
    font-size: 20px;
    color:black;
    padding: 12px 12px 10px 10px;
-   margin-left: 10px
+   margin-left: 10px;
+   cursor: pointer;
+   
 }
 .postButtons{
 
